<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:background="@drawable/sesc_santoandre"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="33dp"
        android:adjustViewBounds="true"
        android:contentDescription="SESC"
        android:src="@drawable/sesc_logo" />
   
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:shadowColor="@android:color/white"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="5"
        android:text="@string/unidade_sesc"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="40sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/agenda_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/welcome_button_margin"
        android:layout_marginTop="15dp"
        android:text="@string/sesc_program_agenda" />

    <Button
        android:id="@+id/map_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/agenda_button"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/welcome_button_margin"
        android:layout_marginTop="8dp"
        android:clickable="false"
        android:text="@string/sesc_map"
        android:textColor="@android:color/primary_text_light" />

    <Button
        android:id="@+id/about_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/map_button"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/welcome_button_margin"
        android:layout_marginTop="8dp"
        android:text="@string/sesc_about_app" />
    
    
</RelativeLayout>
